# Doordash_ETA_Predictor

./: README.md  data_description.md
mage_data/: evidently_report_07-26-2024.html  evidently_report_07-27-2024.html  evidently_report_07-27-2024.py  evidently_report_07-28-2024.html  evidently_report_07-28-2024.py  evidently_report_26-07-2024.html  pipeline.pkl
mage_data/doordash_eta/.cache/: block_action_objects_mapping  blocks_to_pipeline_mapping  pipeline_details_mapping
mlflow/: exploratory_data_analysis.ipynb  mlflow.db  predict.py
mlflow/mlruns/0/: meta.yaml
monitoring/: docker-compose.yml  pyproject.toml
monitoring/config/: grafana_datasources.yaml
orchestration/: .env.dev  .gitignore  Dockerfile  data_description.md  docker-compose.yml  readme.MD  requirements.txt  start.sh
orchestration/doordash_eta/: metadata.yaml  requirements.txt
orchestration/doordash_eta/.file_versions/custom/save_evidently_report_to_s3.py/: 1722087638  1722087701  (+20 more)
orchestration/doordash_eta/data_exporters/: save_report_to_s3.py
orchestration/doordash_eta/fake_data/: pyproject.toml
orchestration/doordash_eta/transformers/: add_target_to_df.py  clean_data.py  evidently_report.py  get_prediction.py  get_rf_prediction.py  make_fake_data.py  write_evidently_to_influxdb.py
web-service/: Dockerfile  predict1.py  predict_mlflow.py  pyproject.toml
web-service/prediction-server/: pyproject.toml
web-service/prediction-server/mlruns/0/: meta.yaml
web-service/prediction-server/prediction_server/: predict_mlflow.py
web-service/prediction-server/tests/: test-web-server.py
(+395 files in other folders)
