[tool.poetry]
name = "monitoring"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mage = "^0.3"
tqdm = "^4.66.4"
requests = "^2.32.3"
joblib = "^1.4.2"
pyarrow = "^17.0.0"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
evidently = "^0.4.31"
pandas = "^2.2.2"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
