[tool.poetry]
name = "web-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.14.3"
jupyter = "^1.0.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
hyperopt = "^0.2.7"
xgboost = "^2.1.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.148"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
