[tool.poetry]
name = "prediction-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
mlflow = "^2.14"
pandas = "^2.2.2"
boto3 = "^1.34.148"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
